# ai_decision_workshop

./: .gitignore  Makefile  README.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt
notebooks/: 01_prior_and_posterior.ipynb  02_bayesian_bandits.ipynb  03_hierarchical.ipynb  04_prediction.ipynb  1-ai-agent-mvp.ipynb  2-basic-function-calls.ipynb
soln/: 01_prior_and_posterior.ipynb  02_bayesian_bandits.ipynb  02_hierarchical.ipynb  03_hierarchical.ipynb  04_prediction.ipynb
